--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -1,4 +1,4 @@
-spring:
+﻿spring:
   profiles:
     active:
     - dev
@@ -42,8 +42,8 @@ info:
   company.name: whcm
   build.artifactId: $project.artifactId$
   build.version: $project.version$
-  ---
-  server:
+---
+server:
   port: 8001
   
 mybatis:
@@ -53,7 +53,7 @@ mybatis:
   - classpath:mybatis/mapper/**/*.xml                  #mapper映射文件
   
 spring:
-  profiles: dev
+  profiles: test
   application:
     name: microservicecloud-dept                      #非常重要，此服务就是暴露在外的微服务名字
   datasource:
